[tool.poetry]
name = "notalib"
version = "1.0.2"
description = "A collection of utility functions & classes"
authors = ["m1kc (Max Musatov) <m1kc@yandex.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/m1kc/notalib"
repository = "https://github.com/m1kc/notalib.git"
documentation = "https://github.com/m1kc/notalib"
keywords = ["utility", "django", "pandas"]
classifiers = [
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
arrow = ">=0.14.0"

[tool.poetry.dev-dependencies]
django = "^2.2"
pytest = "^5.0"
pytest-cov = "^2.7"
hypothesis = "^4.32"
hypothesis-django = "^2.0"
hypothesis-numpy = "^2.0"
flake8 = "^3.7"
pytest-django = "^3.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
