[tool.poetry]
name = "notalib"
version = "1.3.2"
description = "A collection of utility functions & classes"
authors = ["m1kc (Max Musatov) <m1kc@yandex.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/m1kc/notalib"
repository = "https://github.com/m1kc/notalib.git"
documentation = "https://github.com/m1kc/notalib"
keywords = ["utility", "django", "pandas"]
classifiers = [
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7.3"
arrow = ">=0.14.0,<2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.0"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
Django = ">=2"
hypothesis = {extras = ["django", "numpy"], version = "^6.36.1"}
numpy = "^1.21.1"
pandas = "^1.1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
