[tool.poetry]
name = "notalib"
version = "2.4.0"
description = "A collection of utility functions & classes"
authors = ["m1kc (Max Musatov) <m1kc@yandex.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/m1kc/notalib"
repository = "https://github.com/m1kc/notalib.git"
documentation = "https://github.com/m1kc/notalib"
keywords = ["utility", "django", "pandas"]
classifiers = [
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7.3"
arrow = ">=0.14.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.0"
pytest = "^7.0.0"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
Django = ">=2"
hypothesis = {extras = ["django", "numpy"], version = "^6.36.1"}
numpy = [
  {version = ">=1.20.0", python = ">=3.9"},
  {version = "*", python = "<3.9"}
]
pandas = [
  {version = "^1.1.5", python = ">=3.9"},
  {version = "*", python = "<3.9"}
]
tablib = "^3.4.0"
djangorestframework = "^3.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
